<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Happy Learning Land</string>
    <string name="sign_In">Iniciar Sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="prefs_file">com.example.happylearningland.PREFERENCE_FILE_KEY</string>
    <string name="webclient_id">114555254837-fp4l71bf19kp6n1g0j7qvu3appgba4r2.apps.googleusercontent.com</string>

    <!-- Texto en Pantallas -->
    <string name="name">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="check_password">Confirmar contraseña</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="o">O</string>
    
    <!-- Texto de nav bottom -->
    <string name="game_letters">Letras</string>
    <string name="game_robot">Robot</string>
    <string name="game_shop">Tienda</string>
    <string name="game_alimentacion">Alimentación</string>
    <string name="game_recicle">Reciclaje</string>
    <string name="task">Tareas</string>

    <!-- Texto de contenedor de Coins -->
    <string name="coins">0</string>
    <!-- Texto de Letters -->
    <string name="question">¿Qué es?</string>
    <!-- Texto de Task -->
    <string name="finishTask">¿Completaste todas las tareas?</string>

    <!-- Texto de precio de productos del minijuego de la Tienda -->
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>

    <!-- Texto del minijuego de Alimentación -->
    <string name="food">Alimentos</string>
    <string name="drinks">Bebidas</string>

    <!-- Texto de Menú del minijuego de Reciclaje -->
    <string name="tutorial">Tutorial</string>
    <string name="easy">Fácil</string>
    <string name="hard">Difícil</string>
    <string name="time">Tiempo:</string>
    <string name="seconds">10</string>
    <string name="seconds_hard">20</string>
    <string name="score">0</string>
    <string name="slash">/</string>
    <string name="trash">Basura</string>

    <!-- Texto del Settings bottom sheet modal -->
    <string name="settings">Configuración de sonido</string>
    <string name="cancelar">Cancelar</string>
    <string name="comer">Comer</string>
    <string name="comprar">Comprar</string>
    <string name="indicadorSalud">Indicador de Salud:</string>

    <!-- Texto de recuperación -->
    <string name="recuperacion">Recuperación de la cuenta</string>
    <string name="resumeRecuperacion">Ingrese su correo para que se le puedan enviar los pasos para cambiar su contraseña.</string>
    <string name="enviar">Enviar</string>

    <!-- Texto de verificación -->
    <string name="verificacion">Verificación de correo</string>
    <string name="resumeVerificacion">Para completar su registro verifique su correo y después de clic en continuar.</string>
    <string name="continuar">Continuar</string>

    <string name="contraseña">Tu contraseña debe tener 8 caracteres como mínimo, con 1 mayúscula, 1 número y al menos un carácter especial.</string>
</resources>