<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomSheetAlimentation"
    android:background="@drawable/bg_bottomsheet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Contenedor de texto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3">

                <!-- Contenedor de título del bottom sheet modal -->
                <TextView
                    android:id="@+id/textoProducto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/settings" />

            </LinearLayout>

            <!-- Contenendor de imagen -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <!-- Espacio en blanco -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </LinearLayout>

                <!-- Imagen de alimento -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <!-- Contenedor de botón de salud -->
                    <ImageView
                        android:id="@+id/imgAlimento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_google"/>

                </LinearLayout>

                <!-- Espacio en blanco -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </LinearLayout>

            </LinearLayout>

            <!-- Contenendor de audio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2.5">

                <!-- Contenedor de texto -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/icicle"
                    android:layout_weight="1">

                    <!-- Contenedor de indicador de salud -->
                    <TextView
                        android:id="@+id/textoInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/indicadorSalud" />

                </LinearLayout>

                <!-- Contenendor de imagen de salud -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/icicle"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="3">

                        <!-- Contenedor de botón de salud -->
                        <ImageView
                            android:id="@+id/btnSalud"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_google"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Contenendor de botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3">

                <!-- Contenendor de botón de cancelar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        app:shapeAppearanceOverlay="@style/ButtonSignIn"
                        app:backgroundTint="@color/cerulean"
                        android:id="@+id/btnCancelar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <!-- Contenendor de botón de comer -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        app:shapeAppearanceOverlay="@style/ButtonSignIn"
                        app:backgroundTint="@color/cerulean"
                        android:id="@+id/btnComer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comer"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:textColor="@color/textColor" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>